    * insight.Theme.seriesStyle.showPoints => insight.Theme.seriesStyle.shouldShowPoints
    * insight.Formatters => insight.formatters.
    * insight.Scales.Linear => insight.scales.linear
    * insight.Scales.Ordinal => insight.scales.ordinal
    * insight.Scales.Time => insight.scales.time
    * insight.Constants => insight.constants
    * insight.Utils => insight.utils

* Issues fixed:
  * Date axis tick labels were jumping on interactive charts
  * Charts were not able to be drawn with no data



=== Version 1.1.1-Hotfix (23-Sep-2014) ===

* Fixed issue with chart highlighting in IE 11.



=== Version 1.1.1 (18-Sep-2014) ===

* Library changes:
  * Sets default currency of currency formatter to USD.
  * Merges common functionality in ScatterSeries and BubbleSeries into a common PointSeries.
  * Deprecated “ScatterSeries.pointRadius”. Use “ScatterSeries.radiusFunction” instead.
  * ChartGroup.filterByGrouping: allows a given grouping to be filtered by a given value.
  * ChartGroup.clearFilters: allows all previously applied filters to be removed.

* Issues fixed:
  * Horizontal axis tick labels were not anchored at the middle by default.
  * Chart titles were not within the chart SVG bounds.
  * Points were hidden when plotting multiple line series on a single chart.
  * Calculated charts margins were too large or too small.
  * Axis tick marks were obscured in bottom/right axis orientation.
  * There were too many ticks appearing on small charts.
  * Points on a scatter series were not transitioning when drawn.
  * Axis line width and color were not being displayed as they were set.



=== Version 1.1.0 (05-Sep-2014) ===

* Adds theming to charts and tables. By default this uses the LightTheme.
* Removes the concept of sub-series from Column and Row series. Instead, multiple bars should be represented by multiple series.
* Introduces the “Correlation Coefficient” calculator, as “insight.correlation”.