@@ -5,10 +5,10 @@
      * @constructor
      * @param {String} name - A uniquely identifying name for this table
      * @param {String} element - The css selector identifying the div container that the table will be drawn in.
-     * @param {insight.DataSet} dataset - The DataSet to render this Table from
+     * @param {insight.Grouping} grouping - The Grouping to render this Table from
      * @example var myTable = new insight.Table('My Table', '#table-div', data);
      */
-    insight.Table = function Table(name, element, dataset) {
+    insight.Table = function Table(name, element, grouping) {
 
         // Private variables ------------------------------------------------------------------------------------------
 
@@ -33,7 +33,7 @@
 
         self.name = name;
         self.element = element;
-        self.data = dataset;
+        self.data = grouping;
         self.selectedItems = [];
 
         // Private functions ------------------------------------------------------------------------------------------
